Fixed font sizes and spacing for tablet and desktop view (index.html)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ body{
 
 h1{
     font-weight: 700;
-    font-size: 1.725rem;
+    font-size: 1.5rem;
 }
 
 h2{
@@ -87,15 +87,21 @@ button{
 }
 
 .header{
-    margin-top: 2.5rem;
-    margin-bottom: 3rem;
+    margin-top: 4rem;
+    margin-bottom: 6rem;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 
+.header h1{
+    font-size: 2.5rem;
+}
+
+
 #company-logo{
-    width: 30px;
+    width: 2.5rem;
     margin-right: 0.2rem;
 
 }
@@ -106,6 +112,10 @@ button{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+.greetings h2{
+    font-size: 1.75rem;
 }
 
 .main-btn{
@@ -148,7 +158,7 @@ button{
 
 
 .news h1{
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
 }  
 
 .news-details{
@@ -312,16 +322,50 @@ button{
 
 /* Media Queries */
 
+/* Tablet View */
+
 @media(min-width: 40rem){
 
+/* News Feature */
 .index-container{
     width: 37.5rem;
     margin: auto;
 }
 
+.header h1{
+    font-size: 2rem;
 }
 
-@media(min-width: 980px){
+#company-logo{
+    width: 2.5rem;
+}
+
+.greetings h2{
+    font-size: 1.75rem;
+}
+
+}
+
+
+
+/* Desktop View */
+
+@media(min-width: 60rem){
+
+/* News Feature */
+
+.index-container{
+    width: 55rem;
+
+}
+
+.header h1{
+    font-size: 3rem;
+}
+
+.greetings h2{
+    font-size: 2.5rem;
+}
 
 }
 
